--- a/ToDo.HTML
+++ b/ToDo.HTML
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-gray-200">
     <div class="max-w-xl mx-auto">
-      <h1 class="text-3xl font-bold text-center my-8">To-Do List</h1>
+      <h1 class="text-3xl font-bold text-center my-8">To Do List</h1>
       <form class="flex mb-4" id="todo-form">
         <input
           type="text"
